--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoYouKnowMe</title>
+    <script>
+        console.log("Hello! script is working!")
+    </script>
 </head>
 <body>
     Hii, I am Ajmal Husaain
